Fixed Layout Issues in MS-Edge

--- a/style.css
+++ b/style.css
@@ -172,21 +172,23 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80vw;
-    height: 80vh;
-    margin-top: 70px;
   }
 
   .wrapper {
-    width: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+    min-width: 100vh;
+    margin: 0;
   }
 
   .cards {
-    width: 660px;
+    max-width: 800px;
     height: 480px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(2, 1fr);
     margin: 0 auto;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 19px;
   }
